// Qualification DTOs and Types

export interface QualificationDto {
  id?: string
  code: string
  description: string
  createdAt?: string
  updatedAt?: string
}
